--- a/noteform.html
+++ b/noteform.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Note Form</title>
+  <title>Evernote Note Form</title>
 </head>
 <body>
   <form id="noteForm">
