--- a/noteform.html
+++ b/noteform.html
@@ -1,29 +1,98 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Evernote Note Form</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Quick Note Form</title>
+  <style>
+    body {
+      background-color: #121212;
+      color: #d0f0c0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      padding: 1rem;
+    }
+
+    h1 {
+      color: #33cc66;
+      margin-bottom: 1rem;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      width: 100%;
+      max-width: 400px;
+    }
+
+    label {
+      font-size: 1rem;
+      color: #ccffcc;
+    }
+
+    input, textarea {
+      background-color: #1e1e1e;
+      color: #e0ffe0;
+      border: 1px solid #33cc66;
+      border-radius: 6px;
+      padding: 0.75rem;
+      font-size: 1rem;
+      width: 100%;
+    }
+
+    textarea {
+      resize: vertical;
+      min-height: 150px;
+    }
+
+    button {
+      background-color: #33cc66;
+      color: #000;
+      border: none;
+      border-radius: 6px;
+      padding: 0.75rem;
+      font-weight: bold;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background-color 0.2s ease;
+    }
+
+    button:hover {
+      background-color: #28a745;
+    }
+  </style>
 </head>
 <body>
+  <h1>New Evernote Note</h1>
   <form id="noteForm">
-    <label for="title">Title:</label><br />
-    <input type="text" id="title" name="title" required /><br /><br />
-    
-    <label for="body">Note Body:</label><br />
-    <textarea id="body" name="body" rows="6" cols="30" required></textarea><br /><br />
-    
-    <button type="submit">Submit</button>
+    <div>
+      <label for="title">Title</label>
+      <input type="text" id="title" name="title" required />
+    </div>
+
+    <div>
+      <label for="body">Note Body</label>
+      <textarea id="body" name="body" required></textarea>
+    </div>
+
+    <button type="submit">Save to Evernote</button>
   </form>
 
   <script>
     document.getElementById('noteForm').addEventListener('submit', function(e) {
-  e.preventDefault();
-  const title = document.getElementById('title').value;
-  const body = document.getElementById('body').value;
+      e.preventDefault();
+      const title = document.getElementById('title').value;
+      const body = document.getElementById('body').value;
 
-  const payload = encodeURIComponent(JSON.stringify({ title, body }));
+      const payload = encodeURIComponent(JSON.stringify({ title, body }));
 
-  window.location.href = `shortcuts://run-shortcut?name=Add%20To%20Evernote%20for%20Mac&input=text&text=${payload}`;
-});
+      window.location.href = `shortcuts://run-shortcut?name=Add%20To%20Evernote%20for%20Mac&input=text&text=${payload}`;
+    });
   </script>
 </body>
 </html>
