--- a/noteform.html
+++ b/noteform.html
@@ -12,76 +12,78 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start; /* Pulls content toward the top */
       height: 100vh;
-      padding: 1rem;
+      padding: 2rem 1rem 1rem;
+      box-sizing: border-box;
     }
-
+  
     h1 {
       color: #33cc66;
-      margin-bottom: 1rem;
+      margin: 1rem 0;
+      font-size: 1.8rem;
     }
-
+  
     form {
       display: flex;
       flex-direction: column;
-      gap: 1rem;
+      gap: 1.25rem;
       width: 100%;
-      max-width: 400px;
+      max-width: 450px;
     }
-
+  
     label {
       font-size: 1rem;
       color: #ccffcc;
     }
-
+  
     input, textarea {
       background-color: #1e1e1e;
       color: #e0ffe0;
       border: 1px solid #33cc66;
       border-radius: 6px;
-      padding: 0.75rem;
+      padding: 1rem;
       font-size: 1rem;
       width: 100%;
     }
-
+  
     textarea {
       resize: vertical;
-      min-height: 150px;
+      min-height: 200px; /* Taller default note area */
     }
-
+  
     button {
       background-color: #33cc66;
       color: #000;
       border: none;
-      border-radius: 6px;
-      padding: 0.75rem;
+      border-radius: 8px;
+      padding: 1rem;
       font-weight: bold;
       font-size: 1rem;
       cursor: pointer;
       transition: background-color 0.2s ease;
     }
-
+  
     button:hover {
       background-color: #28a745;
     }
   </style>
-</head>
-<body>
-  <h1>New Evernote Note</h1>
-  <form id="noteForm">
-    <div>
-      <label for="title">Title</label>
-      <input type="text" id="title" name="title" required />
-    </div>
-
-    <div>
-      <label for="body">Note Body</label>
-      <textarea id="body" name="body" required></textarea>
-    </div>
-
-    <button type="submit">Save to Evernote</button>
-  </form>
+  
+  <body>
+    <h1>New Evernote Note</h1>
+    <form id="noteForm">
+      <div>
+        <label for="title">Title</label>
+        <input type="text" id="title" name="title" required />
+      </div>
+  
+      <div>
+        <label for="body">Note Body</label>
+        <textarea id="body" name="body" required></textarea>
+      </div>
+  
+      <button type="submit">Save to Evernote</button>
+    </form>
 
   <script>
     document.getElementById('noteForm').addEventListener('submit', function(e) {
