--- a/noteform.html
+++ b/noteform.html
@@ -12,78 +12,81 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start; /* Pulls content toward the top */
+      justify-content: flex-start;
       height: 100vh;
-      padding: 2rem 1rem 1rem;
+      max-height: 100%;
+      padding: 1rem;
+      overflow: hidden;
       box-sizing: border-box;
     }
-  
+
     h1 {
       color: #33cc66;
-      margin: 1rem 0;
-      font-size: 1.8rem;
+      margin: 1rem 0 0.5rem;
+      font-size: 1.6rem;
     }
-  
+
     form {
       display: flex;
       flex-direction: column;
-      gap: 1.25rem;
+      gap: 0.75rem;
       width: 100%;
-      max-width: 450px;
+      max-width: 400px;
     }
-  
+
     label {
-      font-size: 1rem;
+      font-size: 0.95rem;
       color: #ccffcc;
     }
-  
+
     input, textarea {
       background-color: #1e1e1e;
       color: #e0ffe0;
       border: 1px solid #33cc66;
       border-radius: 6px;
-      padding: 1rem;
-      font-size: 1rem;
+      padding: 0.75rem;
+      font-size: 0.95rem;
       width: 100%;
     }
-  
+
     textarea {
       resize: vertical;
-      min-height: 200px; /* Taller default note area */
+      min-height: 150px;
     }
-  
+
     button {
       background-color: #33cc66;
       color: #000;
       border: none;
       border-radius: 8px;
-      padding: 1rem;
+      padding: 0.75rem;
       font-weight: bold;
-      font-size: 1rem;
+      font-size: 0.95rem;
       cursor: pointer;
       transition: background-color 0.2s ease;
     }
-  
+
     button:hover {
       background-color: #28a745;
     }
   </style>
-  
-  <body>
-    <h1>New Evernote Note</h1>
-    <form id="noteForm">
-      <div>
-        <label for="title">Title</label>
-        <input type="text" id="title" name="title" required />
-      </div>
-  
-      <div>
-        <label for="body">Note Body</label>
-        <textarea id="body" name="body" required></textarea>
-      </div>
-  
-      <button type="submit">Save to Evernote</button>
-    </form>
+</head>
+
+<body>
+  <h1>New Evernote Note</h1>
+  <form id="noteForm">
+    <div>
+      <label for="title">Title</label>
+      <input type="text" id="title" name="title" required />
+    </div>
+
+    <div>
+      <label for="body">Note Body</label>
+      <textarea id="body" name="body" required></textarea>
+    </div>
+
+    <button type="submit">Save to Evernote</button>
+  </form>
 
   <script>
     document.getElementById('noteForm').addEventListener('submit', function(e) {
@@ -92,7 +95,6 @@
       const body = document.getElementById('body').value;
 
       const payload = encodeURIComponent(JSON.stringify({ title, body }));
-
       window.location.href = `shortcuts://run-shortcut?name=Add%20To%20Evernote%20for%20Mac&input=text&text=${payload}`;
     });
   </script>
