Adjusted auto height

--- a/noteform.html
+++ b/noteform.html
@@ -5,20 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Quick Note Form</title>
   <style>
-    body {
-      background-color: #121212;
-      color: #d0f0c0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      height: 100vh;
-      max-height: 100%;
-      padding: 1rem;
-      overflow: hidden;
-      box-sizing: border-box;
-    }
+body {
+  background-color: #121212;
+  color: #d0f0c0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 1.5rem 1rem;
+  margin: 0;
+  height: auto;
+  box-sizing: border-box;
+}
 
     h1 {
       color: #33cc66;
